Ny rapport flækket!
(just like your mom)

--- a/Rapport/contents/formalities/titleSheet.tex
+++ b/Rapport/contents/formalities/titleSheet.tex
@@ -37,7 +37,7 @@
 
 \item { Title:} 
 
-Line following robot
+SICK PEW PEW robot
 
 \end{description}
 
@@ -45,7 +45,7 @@ Line following robot
 
 \begin{description}
 \item { Project Period:}\\
-   2. Semester | Spring semester 2016\\
+   3. Semester | Spring semester 2016\\
   \hspace{4cm}
 \item { Projectgroup:}\\
   Group 2 
@@ -63,9 +63,9 @@ Steffen Vutborg
 \end{description}
 }
 \begin{description}
-\item { Pages: 36} 
-\item { Appendices: 22} 
-\item { Completed June 6th 2016} 
+\item { Pages: } 
+\item { Appendices: } 
+\item { Completed:} 
 \end{description}
 \vfill } &
 \parbox{7cm}{
