--- a/Rapport/contents/test/test.tex
+++ b/Rapport/contents/test/test.tex
@@ -1,198 +1,101 @@
-To make sure the product as a whole is working according to plan, testing must be done. First the components must be tested, this is done individually for each component to make sure there are no errors or fails when the product is built. The purpose of integration testing is to detect any inconsistencies between the software units that are integrated together. Testing is also done to watch the behavior of the product and tweak it.
+Beskriv test section
 
 \section{Unit Testing}
-The individual parts of the system will be tested in the following section
-\subsection{Sensor}
-The following test is to make sure that the selected sensors work as intended for the project.
 
-\subsubsection{Equipment}
-\begin{enumerate}
-    \item[•]Hameg HM8040-2 Triple Power Supply
-	\item[•]Fluke 45 Multimeter
-\end{enumerate}
+\subsection{Sensor}
+
+
+%\subsubsection{Equipment}
+%\begin{enumerate}
+%    \item[•]Hameg HM8040-2 Triple Power Supply
+%	\item[•]Fluke 45 Multimeter
+%\end{enumerate}
 
 \subsubsection{Setup}
-Sensor is powered through the robot.
-Output from sensor is measured with multimeter.
+
 
 \subsubsection{Results}
-\textbf{White Surface:}
-Average voltage measured: 230 mV\newline
-\textbf{Black Surface:}
-Average voltage measured: 2,6 V\newline
-This shows that the sensor clearly measures a difference between light and dark surfaces, making it ideal for this application.
+%\textbf{White Surface:}
+%Average voltage measured: 230 mV\newline
+%\textbf{Black Surface:}
+
 
 \subsection{DC Motors}
-The following test is to make sure that the DC motors work as intended.
 
-\subsubsection{Equipment}
-\begin{enumerate}
-	\item[•]Hameg HM8040-2 Triple Power Supply
-	\item[•]Fluke 45 Multimeter
-\end{enumerate}
+
+%\subsubsection{Equipment}
+%\begin{enumerate}
+%	\item[•]Hameg HM8040-2 Triple Power Supply
+%	\item[•]Fluke 45 Multimeter
+%\end{enumerate}
 
 \subsubsection{Setup}
-The motor is powered through the power supply.
-Amount of drawn current is measured with multimeter.
 
 \subsubsection{Results}
-Both motors have been measured at 6 V and show a steady current draw of 0,11 A when running freely.
-
 
 \subsection{H-Bridge}
-The following test is to make sure the H-bridge works as intended.
 
 \subsubsection{Equipment}
-\begin{enumerate}
-	\item[•]Hameg HM8040-2 Triple Power Supply
-	\item[•]Fluke 45 Multimeter
-	\item[•]Agilent MSO-X 3024A Oscilloscope.
-\end{enumerate}
+%\begin{enumerate}
+%	\item[•]Hameg HM8040-2 Triple Power Supply
+%	\item[•]Fluke 45 Multimeter
+%	\item[•]Agilent MSO-X 3024A Oscilloscope.
+%\end{enumerate}
 
 \subsubsection{Setup}
-H-Bridge is powered by the power supply.
-PWM and duty cycle is controlled by the function generator in the Oscilloscope.
-Output is measured with the multimeter.
-H-bridge motor direction is controlled manually.
 
 \subsubsection{Results}
-\textbf{Direction: 0}
-\begin{enumerate}
-	\item[•]\textbf{Duty Cycle 20\%:} 1,76 V measured.
-	\item[•]\textbf{Duty Cycle 50\%:} 2,74 V measured.
-	\item[•]\textbf{Duty Cycle 80\%:} 3,58 V measured.
-\end{enumerate}
-
-\textbf{Direction: 1}
-\begin{enumerate}
-	\item[•]\textbf{Duty Cycle 20\%:} -1,57 V measured.
-	\item[•]\textbf{Duty Cycle 50\%:} -2,55 V measured.
-	\item[•]\textbf{Duty Cycle 80\%:} -3,50 V measured.
-\end{enumerate}
-
-The results show that the H-Bridge unit is capaple of controlling the voltage output in both directions, with the output voltage level controlled by the PWM signal applied to the unit.
 
 \subsection{PWM}
-This test is to measure the PWM capability of the PIC32MX320F128H as well to see is the software implementation is capable of controlling the PWM module of the MCU.
 
 \subsubsection{Equipment}
-\begin{enumerate}
-	\item[•]Agilent MSO-X 3024A Oscilloscope.
-	\item[•]chipKIT Uno32 with PICkit 3 programmer.
-\end{enumerate}
 
 \subsubsection{Setup}
-The Uno32 board is programmed to run the PWM at different frequencies and duty cycles.
-Output is measured with the Oscilloscope.
 
 \subsubsection{Results}
-The test shows that the PWM module and developed software is working as intended.
-\img{figures/f1000d20.png}{Output with 1000 Hz frequency and 20\% Duty Cycle}{f1000d20}{0.7}
-\img{figures/f1000d50.png}{Output with 1000 Hz frequency and 50\% Duty Cycle}{f1000d50}{0.7}
-\img{figures/f1000d80.png}{Output with 1000 Hz frequency and 80\% Duty Cycle}{f1000d80}{0.7}
-\img{figures/f10000d50.png}{Output with 10000 Hz frequency and 50\% Duty Cycle}{f10000d50}{0.7}\newpage
 
 \subsection{ADC}
-This test is to show that the ADC module and the developed software for the module is working as intended.
 
 \subsubsection{Equipment}
-\begin{enumerate}
-	\item[•]Hameg HM8040-2 Triple Power Supply.
-	\item[•]chipKIT Uno32 with PICkit 3 programmer in debug mode.
-\end{enumerate}
-
+ 
 \subsubsection{Setup}
-The Uno32 is powered from the PICkit 3 programmer in debug mode to read the contents of a variabel containing the output of the ADC module.
-The input voltage on the ADC is supplied by the power supply.
-
+ 
 \subsubsection{Results}
-\begin{enumerate}
-	\item[•] \textbf{PS:} 0,499V - \textbf{Measured:} 163 (0,526V) - \textbf{Error:} 5,3\%
-	\item[•] \textbf{PS:} 1,000V - \textbf{Measured:} 331 (1,068V) - \textbf{Error:} 6,7\%
-	\item[•] \textbf{PS:} 2,006V - \textbf{Measured:} 665 (2,145V) - \textbf{Error:} 6,4\%
-	\item[•] \textbf{PS:} 3,299V - \textbf{Measured:} 1023 (3,300V) - \textbf{Error:} 0,03\%
-\end{enumerate}
-This shows that the ADC and the developed software works within the required area for the application.
-\newpage
+ 
 \section{Integration Testing}
 
 \subsection{PWM motor control}
-The following test is to show that the DC motors can be controlled by the H-bridge unit.
-
+ 
 \subsubsection{Equipment}
-\begin{enumerate}
-	\item[•]Hameg HM8040-2 Triple Power Supply.
-	\item[•]chipKIT Uno32 with PICkit 3 programmer.
-\end{enumerate}
-
+ 
 \subsubsection{Setup}
-	The H-bridge module is powered from the power supply.
-	The control signals is controlled by the Uno32 board.
-
+ 
 \subsubsection{Results}
-\begin{enumerate}
-	\item[•]\textbf{PWM: 20\%:} Motors are not turning. Audible whine.
-	\item[•]\textbf{PWM: 30\%:} Motors are not turning. Higher audible whine.
-	\item[•]\textbf{PWM: 37\%:} Motors are turning slowly with assisted start.
-	\item[•]\textbf{PWM: 40\%:} Motors are turning slowly.
-	\item[•]\textbf{PWM: 100\%:} Motors are turning maximum speed.
-\end{enumerate}
-This shows that we the current setup of Motors and H-bridge unit, the variable control span is between an duty cycle of 37\% and 100\%.
-
+ 
 \subsection{Robot to Interface communication}
-This test is to show that the system is capable of transmitting current data from the robot to the interface and accurately show it to the user.
 
 \subsubsection{Equipment}
-\begin{enumerate}
-	\item[•]chipKIT Uno32 with PICkit 3 programmer.
-	\item[•]BlueSMIRF silver Bluetooth module.
-	\item[•]PC running C\# interface.
-\end{enumerate}
 
 \subsubsection{Setup}
-The robot is placed so that the sensors measures over a white and a black surface.
-data is sent over bluetooth to the interface and data recorded.
-
+ 
 \subsubsection{Results}
-\sidebyimg{figures/sensorsonwhite.png}{Interface showing data sent with sensors placed over white surface}{figures/sensorsonblack.png}{Interface showing data sent with sensors placed over black surface}
-
+ 
 \section{System Testing}
-This test is to show that the system works as intended.
-
+ 
 \subsubsection{Equipment}
-\begin{enumerate}
-	\item[•]chipKIT Uno32 with PICkit 3 programmer.
-	\item[•]BlueSMIRF silver Bluetooth module.
-	\item[•]PC running C\# interface.
-\end{enumerate}
 
 \subsubsection{Setup}
-The system is tested by placing the robot in 3 different situations.
-\begin{enumerate}
-	\item[•]Centered on line.
-	\item[•]Line at the right end of sensor array.
-	\item[•]Line at the left end of sensor array.
-\end{enumerate}
-\newpage
+
 \subsubsection{Results}
-\img{figures/interfacestraight.png}{Only the middle sensor is detecting the line}{interfacestraight}{0.5}
-\sidebyimg{figures/interfaceleftturn.png}{Sensor on the left detects line, initiate left turn}{figures/interfacerightturn.png}{Sensor on the right detects line, initiate right turn}
-\newpage
+ 
 \section{Acceptance Testing}
-This test is to show that the product as a whole works on a simple test track.
-
+ 
 \subsubsection{Equipment}
-\begin{enumerate}
-	\item[•]Complete robot with working control software
-	\item[•]Test track
-\end{enumerate}
-
+ 
 \subsubsection{Setup}
-The robot is calibrated on the test track and placed on the line. The robots behaviour is recorded and deemed acceptable or not.
-
+ 
 \subsubsection{Results}
-The robot drives acceptably on the track most of the time. Other times, it seems to overshoot on the corners. See attached videos for example tests.
-
+ 
 
 
 
