--- a/Rapport/contents/software/softwaredesc.tex
+++ b/Rapport/contents/software/softwaredesc.tex
@@ -21,7 +21,7 @@ Beskriv Software section
 
 \subsection {Stability} 
 
-\subsubsection {Table \ref{Table: Manual tuning} explained}
+\subsubsection {Table manual explained}
 
 \subsection{PID Implementation}
 
