Shit doesn't work
Awww

--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -33,6 +33,8 @@
 \mainmatter
 \chapter{Introduction}
 \input{contents/formalities/Introduction.tex}
+\chapter{Analysis}
+\input{contents/Analysis/Analysis.tex}
 \chapter{Requirements specification}
 \input{contents/reqspec.tex}
 \chapter{Hardware section}
