fixed bibtex notation

--- a/Rapport/bibliography/bibliography.bib
+++ b/Rapport/bibliography/bibliography.bib
@@ -1,6 +1,5 @@
-‰mike ref
 @online{ucn,
-author={placeholderAuthor}
+author={placeholderAuthor},
 title = {placeholderTitle },
 year = 2016,
 url = {http://www.ucn.dk},
