--- a/Rapport/contents/Analysis/Analysis.tex
+++ b/Rapport/contents/Analysis/Analysis.tex
@@ -4,7 +4,7 @@ Indledning til afsnittet af analyse\\
 
 The problem presented to the group is how to make a robot move from point A to point B, with the help of different sensors, including ultrasound and infrared, and to make use of autonomous maneuvering to avoid obstacles. \\
 
-$Kort problemstilling$
+%Kort problemstilling
 
 Problemstilling: \\
 - Bot should be able to move from A to B.\\
