--- a/Rapport/contents/Analysis/Analysis.tex
+++ b/Rapport/contents/Analysis/Analysis.tex
@@ -1,15 +1,15 @@
 Indledning til afsnittet af analyse\\
 
-\section{Problemstilling}
+\section{Problem statement}
 
-The problem presented to the group is how to make a robot move from point A to point B, with the help of different sensors, including ultrasound and infrared, and to make use of autonomous maneuvering to avoid obstacles. \\
+The problem presented to the group is how to make a robot move from point A to point B, with the help of different sensors, including ultrasound and infrared, and to make use of autonomous  to avoid obstacles. \\
 
-%Kort problemstilling
 
-Problemstilling: \\
+Problem statement \\
 - Bot should be able to move from A to B.\\
 - Should be able to stop at B\\
-- Maneuverer around obstacles\\
-- Optimize speed of bot to life battery
+- Manoeuvre around obstacles\\
+- Optimize speed of bot
+- 
 
 \section{Problem analysis}
