--- a/Rapport/contents/Analysis/Analysis.tex
+++ b/Rapport/contents/Analysis/Analysis.tex
@@ -2,14 +2,16 @@ Indledning til afsnittet af analyse\\
 
 \section{Problem statement}
 
-The problem presented to the group is how to make a robot move from point A to point B, with the help of different sensors, including ultrasound and infrared, and to make use of autonomous  to avoid obstacles. \\
+The problem presented to the group is how to make a robot move from point A to point B, with the help of different sensors, including ultrasound and infrared, and to make use of autonomous algorithms to avoid obstacles. \\
 
-
-Problem statement \\
-- Bot should be able to move from A to B.\\
-- Should be able to stop at B\\
-- Manoeuvre around obstacles\\
-- Optimize speed of bot
-- 
+Problem statement:
+\begin{enumerate}
+\item[•]Bot should be able to move from A to B
+\item[•]Should be able to stop at a predetermined point
+\item[•]Manoeuvre around obstacles
+\end{enumerate}
 
 \section{Problem analysis}
+\subsection{Mobility from A to B}
+\subsection{Predetermined end point}
+\subsection{Obstacles avoidance}
