--- a/Rapport/contents/Analysis/Analysis.tex
+++ b/Rapport/contents/Analysis/Analysis.tex
@@ -13,5 +13,8 @@ Problem statement:
 
 \section{Problem analysis}
 \subsection{Mobility from A to B}
+Motorer, som bliver styret af H-bro vha. PWM i relation til sensor-læsninger\\
+Line-following-principper.\\
+
 \subsection{Predetermined end point}
 \subsection{Obstacles avoidance}
