went hippie on that ass

--- a/Rapport/contents/formalities/frontpage.tex
+++ b/Rapport/contents/formalities/frontpage.tex
@@ -3,18 +3,18 @@
 
 \begin{figure}[H]
 	\raggedleft
-		\includegraphics[width=0.2\textwidth]{figures/logo-ucn.png}
+		\includegraphics[width=0.3\textwidth]{figures/logo-ucn.png}
 \end{figure}
 \vspace*{\fill} 
 \begin{center}
 \begin{Huge}
-Fall Semester 2015\\
+Fall Semester 2016\\
 \vspace{5 mm}
-\textbf{Line following robot}\\
+\textbf{Autonomous Object Avoidance Robot}\\
 \vspace{3 mm}
 Group 2\\
 \vspace{3 mm}
-2. Semester IT-Technology
+3. Semester IT-Technology
 \end{Huge}
 \includegraphics[width=0.7\textwidth]{figures/Forsidebil.PNG}
 \end{center}
