A-B analyse rettet og forbedret
9/11 never forget.... Poor jews

--- a/Rapport/contents/Analysis/Analysis.tex
+++ b/Rapport/contents/Analysis/Analysis.tex
@@ -13,12 +13,9 @@ Problem statement:
 
 \section{Problem analysis}
 \subsection{Mobility from A to B}
-The robot receives a coordinate to reach, and will use its own starting point to determine a direction to drive towards the given coordinate. The robot will utilize an H-bridge to control its motors and direct current through the motors.\
-This way, the robot can effectively regulate speed and also steer itself autonomously.\
-
-To dictate how much current the motors receive, the programming will utilize pulse width modulation (PWM), this allows the motors to have a determined ‘uptime’, so that it drives and steers in the desired way.\\
-
-The robot will also utilize front-facing sensors to detect obstacles. In the case that it detects these, it will utilize ultra-sound to determine size and shape, so that it can navigate past these and continue on its path towards point B.\
+The robot receives a coordinate to reach, and will use its own starting point to determine a direction to drive towards the given coordinate. The robot will need a way to control its movement and direct current to function optimal.\\
+The robot needs a way to effectively regulate speed and also steer itself autonomously. To dictate how quickly the robot moves, the robot will need some system that allows it to move around on a flat surface, the robot needs to be able to move around from point A to point B.
+.\
 
 \subsection{Predetermined end point}
 \subsection{Obstacles avoidance}
