--- a/Rapport/contents/reqspec.tex
+++ b/Rapport/contents/reqspec.tex
@@ -1,6 +1,12 @@
 Beskriv section
 \cite{ucn}
-%\begin{enumerate}
-%	\item[•]Project must include light sensors
-	
-%\end{enumerate}
+\begin{enumerate}
+	\item[•]The robot needs line following capabilities\\
+	\item[•]The robot needs object avoidance\\
+	\item[•]The robot should make use of an H-bridge\\
+	\item[•]The robot should make use of Motors\\
+	\item[•]The robot needs a way to implement motor control\\
+	\item[•]The robot should make use of a micro-controller unit\\
+	\item[•]The robot should make use of the Magician chassis\\
+\end{enumerate}
+
