--- a/Rapport/contents/Analysis/Analysis.tex
+++ b/Rapport/contents/Analysis/Analysis.tex
@@ -18,4 +18,7 @@ The robot needs a way to effectively regulate speed and also steer itself autono
 .\
 
 \subsection{Predetermined end point}
+After starting, the robot needs to know when to stop. The pre-determined end-point consists of a series of circles which the robot needs to detect. 
+
 \subsection{Obstacles avoidance}
+As part of its functionality, the robot needs to be able to see objects that are in front of it and avoid them. 
