Indledninger til diverse sections, hardware stuff
Eat a dick, you dick eating wanker

--- a/Rapport/contents/Analysis/Analysis.tex
+++ b/Rapport/contents/Analysis/Analysis.tex
@@ -1,4 +1,4 @@
-Indledning til afsnittet af analyse\\
+In this section the problems found when trying to get the robot function, will be listed and analysed
 
 \section{Problem statement}
 
