--- a/Rapport/contents/hardware/hardwaredesc.tex
+++ b/Rapport/contents/hardware/hardwaredesc.tex
@@ -1,21 +1,24 @@
 %\section{Description of the hardware structure and functionality}
-Beskrivelse af afsnit
+In this section the different components of the hardware will be listed, described & explained.
 
 \section{Hardware diagram}
 Beskrivelse af hardware diagram
 
 
-\subsection{Sensor choice}
+\subsection{Object avoidance sensor choices}
+SR04 Ultrasound
+GP2Y0A02YK0F (long) \\	
+GP2Y0A41SK0F (short) \\
+\\
+\subsection{Line following sensor choice} 
 
-
-\subsection{Another sensor choice?}
-
+QRE1113 - 
 \section{Analog-to-digital converter}
 
 
 \subsubsection{ADC diagram} 
 
-\subsubsection{This products usage of ADC}
+\subsubsection{The usage of ADC}
 
 \section{The chipKIT Uno32 board}
 
