--- a/Rapport/contents/reqspec.tex
+++ b/Rapport/contents/reqspec.tex
@@ -1,4 +1,5 @@
-Beskriv section
+This section specifies the requirements. The requirements have been found through the analysis.
+
 \cite{ucn}
 \begin{enumerate}
 	\item[•]The robot needs line following capabilities\\
