--- a/Rapport/contents/hardware/hardwaredesc.tex
+++ b/Rapport/contents/hardware/hardwaredesc.tex
@@ -26,7 +26,7 @@ QRE1113 -
 \section{The motor shield - PKA03}
 
 \subsection{The H bridge}
-
+The robot will make use of an H-bridge. An H-bridge is a circuit made for controlling the motor of the robot, by making sure the motor will never try to do forward and backward motion  and cause errors. The point of using an H-bridge is to ensure motor safety and functionality.
 
 \section{The Bluetooth tranceiver}
 
