--- a/Rapport/contents/hardware/hardwaredesc.tex
+++ b/Rapport/contents/hardware/hardwaredesc.tex
@@ -1,5 +1,6 @@
-%\section{Description of the hardware structure and functionality}
-In this section the different components of the hardware will be listed, described & explained.
+\section{Description of the hardware structure and functionality}
+
+In this section the different components of the hardware will be listed, described and explained.
 
 \section{Hardware diagram}
 Beskrivelse af hardware diagram
