--- a/Rapport/contents/hardware/hardwaredesc.tex
+++ b/Rapport/contents/hardware/hardwaredesc.tex
@@ -13,7 +13,14 @@ GP2Y0A41SK0F (short) \\
 \\
 \subsection{Line following sensor choice} 
 
-QRE1113 - 
+The QRE113 sensor
+
+Due to past experiences, the QRE113 sensor has been chosen to be utilized on the robot to enable its line-following properties. It works by emitting infarred light onto a surface, and then taking a reading based on the amount of light that gets reflected. A light surface will reflect more light back than a dark one. The sensor then regulates it output voltage from 1 to 100%. Based on this output voltage, it is possible to use an ADC to convert these signals into digital signals, which can be monitored more conveniently. Functionally, the robot is left with a way of knowing which surface the sensors are above - and in the case of a track with a black line to follow, this allows it to detect where the line it needs to follow is.\
+
+TBD sensor specs.\
+
+TBD måske lille skema over specs?
+
 \section{Analog-to-digital converter}
 
 
