--- a/Rapport/contents/formalities/preface.tex
+++ b/Rapport/contents/formalities/preface.tex
@@ -4,7 +4,7 @@
 %Læsevejledning:\\
 %Kommer senere i projektforløbet.
 %\\\\
-This project was written by group 2, for the third semester on the IT-electronics education at university college Nordjylland, Sofiendalsvej 60. The project goal is to make a line following robot with object avoidance capabilities.
+This project was written by group 2, for the third semester on the IT-electronics education at university college Nordjylland, Sofiendalsvej 60. The project goal is to make an autonomous robot that can navigate a course utilizing object avoidance and localization.
 %
 \phantom{Luft}\vspace{3cm}
 \begin{table}[H]
