--- a/Rapport/contents/test/test.tex
+++ b/Rapport/contents/test/test.tex
@@ -15,11 +15,11 @@ Beskriv test section
 Power to the sensor is supplied by the power supply and the output is read on the oscilloscope.
 
 \subsubsection{Results}
-\textbf{30mm:} 2.29V
-\textbf{50mm:} 3.07V
-\textbf{100mm:} 2.34V
-\textbf{200mm:} 1.31V
-\textbf{500mm:} 515mV
+\textbf{30mm:}  2.29V\\
+\textbf{50mm:}  3.07V\\
+\textbf{100mm:} 2.34V\\
+\textbf{200mm:} 1.31V\\
+\textbf{500mm:} 515mV\\
 
 As is evident in the results above, this sensor does not work at low distances, which is also described in the datasheet.
 
@@ -36,11 +36,11 @@ As is evident in the results above, this sensor does not work at low distances, 
 A small program for the Arduino has been written which allows the MCU to trigger the sensor and waits a pre-specified amount of time before triggering again, to allow for the return of the ultrasound wave. 
 
 \subsubsection{Results}
-\textbf{30mm:} 152 us
-\textbf{50mm:} 285 us
-\textbf{100mm:} 600 us
-\textbf{200mm:} 1.23 ms
-\textbf{500mm:} 2.32 ms
+\textbf{30mm:}  152 us\\
+\textbf{50mm:}  285 us\\
+\textbf{100mm:} 600 us\\
+\textbf{200mm:} 1.23 ms\\
+\textbf{500mm:} 2.32 ms\\
 
 \subsection{QRE1113}
 
