--- a/Rapport/contents/hardware/hardwaredesc.tex
+++ b/Rapport/contents/hardware/hardwaredesc.tex
@@ -18,10 +18,12 @@ The second is a hybrid set of ultrasound and infrared sensors. These will be wor
 \subsection{Ultrasound sensor}
 When a robot should be able avoid obstacles it will need a device to inform the robot where it's position is compared to the obstacle. This is where an ultrasound sensor plays an important role. For this task the " TBD " has been picked.\\
 
-The way the ultrasound sensor works is by emitting acoustic waves and then waits for the waves to reflect back to the sensor. The waves are often at about 40 kHz and humans are unable to detect the sounds because of the frequencies being above the human audible range.\\
+The way the ultrasound sensor works is by emitting acoustic waves and then waits for the waves to reflect back to the sensor. The waves are often at about 40 kHz and humans are unable to detect the sounds because of the frequencies being above the human audible range.\
+
+What is causing the device to make ultrasonic sound is a piezoelectric crystal. The crystal is receiving a rapid oscillating electrical signal, this causes the crystal to expand and contract and thereby creating a sound wave.\ The sound waves will then after being reflected return to a piezoelectric receiver which can then convert the waves into voltage by using the same method as explained above. \\
 
 
-There are three popular ways to process the information gathered from the ultrasound sensor. \\
+There are several popular ways to process the information gathered from the ultrasound sensor. \\
 
 \begin{enumerate}
 	\item[•]Time of flight
@@ -29,7 +31,9 @@ There are three popular ways to process the information gathered from the ultras
 	\item[•]Amplitude attenuation
 \end{enumerate}
 
-In the scope of the project, the robot will be using "Time of flight" for sensing the distance between itself and the obstacle.\\
+In the scope of the project, the robot will be using "Time of flight" for sensing the distance between itself and the obstacle.\
+
+When working with the term time of flight, it means the ultrasound sensor only generates pulses of sound instead of an continuous streak of sound waves. to avoid confusion. In high speed situations this will mean there is waiting time limits.\\ 
 
 The calculation for using the ultrasound sensor is: \\
 
@@ -39,8 +43,12 @@ c = speed of light\\
 
 r= c*t\\
 
-With this the robot can calculate the time of flight.
-SR04 Ultrasound:\\
+With this the robot can calculate the time of flight.\
+SR04 Ultrasound:\
+\subsubsection{Considerations:}
+When using the ultrasound as a sensing tool, there are some factors that must be taken into consideration.\\ Temperature and humidity can affect the speed of sound, just as air currents have been known to be able to create invisible boundaries that can reflect ultrasonic waves.\\
+Ultrasound sensors have something called a dead zone, this occours when an object is infront of the sensors and the receiver can't keep up.\\
+Some materials are very absorbent, which will result in less reflected ultrasound to be detected by the receiver.
 
 \subsection{Infrared sensor}
 
